--- a/style.css
+++ b/style.css
@@ -24,6 +24,11 @@
       text-align: center;
     }
 
+    .home-link {
+      text-decoration: none;
+      color: inherit;
+    }
+
     nav ul {
       list-style: none;
       padding: 0;
